--- a/theme/static/css/hydroshare_core.css
+++ b/theme/static/css/hydroshare_core.css
@@ -927,7 +927,7 @@ span.remove{
     overflow-x:hidden;
 }
 #txt-title{
-    width: calc(100% - 10px);
+    /*width: calc(100% - 10px);*/
     font-size: 27px;
     /*margin-bottom: 30px;*/
     height: auto;
@@ -999,6 +999,8 @@ html, body{
     height:100%;
     /*background:#F4F4F4;*/
 }
+
+
 
 #btn-public.active{
     color:#FFF;
@@ -1178,7 +1180,10 @@ body > .container{
     padding: 5px;
     background-color: transparent;
     width: auto !important;
+}
 
+.icon-button:hover{
+    text-decoration: none;
 }
 
 .custom-btn-toolbar .icon-button{
@@ -1187,7 +1192,6 @@ body > .container{
     border-radius: 3px;
     background-color: #FFF;
     border: 1px solid#adadad;
-
 }
 
 .custom-btn-toolbar .icon-button:hover {
@@ -1198,11 +1202,26 @@ body > .container{
 .custom-btn-toolbar{
     display: block;
     float: right;
-    background: #F5F5F5;
+    background: #FFF;
     height: auto;
     padding: 8px 4px;
     border: 1px solid #D3D3D3;
-    -webkit-border-radius: 6px;
+    border-top: 1px solid #FFF;
+    /* -webkit-border-radius: 6px; */
+    margin-top: -1px;
+    margin-right: 20px;
+
+}
+
+.custom-btn-toolbar, .lined-wrapper{
+    box-shadow: 1px 1px 1px #E0E0E0;
+}
+
+.lined-wrapper{
+    width: 100%;
+    border-top: 1px solid rgb(173, 173, 173);
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .cc-image{
