[#165] Implemented resource specific metadata editing [#165] Improved tabs behavior on window resizing

--- a/hs_app_netCDF/templates/pages/netcdfresource.html
+++ b/hs_app_netCDF/templates/pages/netcdfresource.html
@@ -85,7 +85,7 @@
                     {% if variables %}
                         {% for variable in variables %}
                             <h4><strong>Variable:</strong></h4>
-                            <hr style="border-color: dodgerblue; margin-top: 0px;margin-bottom: 2px">
+                            <hr style="margin-top: 0px;margin-bottom: 2px">
                             {# Required extended meta subelement for Variable #}
                             <div class="row">
                                 <div class="col-sm-4"><strong>Name:</strong></div>
