--- a/hs_core/templates/pages/create-resource.html
+++ b/hs_core/templates/pages/create-resource.html
@@ -2,6 +2,10 @@
 
 {% load mezzanine_tags pages_tags hydroshare_tags %}
 
+{% block extra_head %}
+      <link href="{{ STATIC_URL }}css/site_base_irods.css" rel="stylesheet"/>
+{% endblock %}
+
 {% block title %}
 
     Create resource
@@ -49,9 +53,19 @@
                 <td><input type="file" name="files" id="select-file" multiple/></td>
             </tr>
             <tr>
-                <td><a id="select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsSignin" multiple="multiple">
-                    <span class="glyphicon glyphicon-plus"><span class="button-label">Browse iRODS...</span></span>
-                </a></td>
+                <td><a id="signin-irods"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsSignin">
+                    <span class="glyphicon glyphicon-plus"><span class="button-label">Sign in iRODS...</span></span>
+                </a>
+                {% if irods_loggedin %}
+                    Signed in as {{ irods_user }}
+                    <a id="select-irods-file"  type="button" class="btn btn-success" data-toggle="modal" data-target="#irodsContent">
+                        <span class="glyphicon glyphicon-plus"><span class="button-label">Browse iRODS...</span></span>
+                    </a>
+                    {{ irods_files }}
+                {% else %}
+                    {{ login_message }}
+                {%  endif %}
+                </td>
             </tr>
         </tbody>
         <div id="file-types">Any file type can be uploaded.</div>
@@ -74,7 +88,7 @@
         <div class="modal fade" id="irodsSignin" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-sm">
                 <div class="modal-content">
-                    <form class="form-signin" role="form" action="{% url "irods_login" %}" method="post">
+                    <form class="form-signin" role="form" action="/irods/login/" method="post">
                         <div class="modal-header">
                             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                             <h4 class="modal-title" id="myModalLabel">Sign in</h4>
@@ -115,9 +129,40 @@
             </div>
         </div>
     {% endblock %}
+    {% block modal_irods_browse %}
+        <div class="modal fade" id="irodsContent" tabindex="-1" role="dialog" aria-labelledby="myModalLabel3" aria-hidden="true">
+          <div class="modal-backdrop up-load" style="opacity:0.5"></div>
+          <img class="ajax-loader" width='100' height='100' src="{{STATIC_URL}}img/ajax-loader.gif" align='center' style="position:absolute;z-index:100000;top:28%;left:50%;">
+          <div class="modal-dialog modal-lg">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                <h4 class="modal-title" id="myModalLabel">iRODS user: <span id="irods_content_label">{{request.session.user}}</span> </h4>
+              </div>
+              <form class="form-signin" role="form" action="/irods/upload/" method="post">
+                <div class="modal-body">
+                  {% csrf_token %}
+                  <input type="hidden" name="store" id="root_store" value="{{ request.session.datastore }}"/>
+                   <input type="hidden" name="upload" id="upload_store" value=""/>
+                    <div id="irods_structure">
+                        <div id="viewing">Viewing : <input type="text" id="irods_view_store" > <input type="text" id="irods_view_store_2" style="display:none;"></div>
+                        <div id = "file_struct">
+                            <!-- <div class="irods_folder" ><img src="{{STATIC_URL}}img/folder.png"></div> -->
+                         </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                  <button type="submit" id="iget_irods" class="btn btn-primary btn-block">Select</button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
+    {% endblock %}
 {% endblock %}
 
 {% block extra_js %}
+    <script type="text/javascript" src="{{STATIC_URL}}js/irods.js" ></script>
     <script type="text/javascript">
     $(function() {
     });
